# dagster-plus-nomad-test

./: .gitignore  Dockerfile  README.md  build.yaml  dagster_cloud.yaml  pyproject.toml
.github/workflows/: dagster-plus-deploy.yml
src/dagster_plus_nomad_test/defs/: hello_world.py
