[project]
name = "dagster_plus_nomad_test"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster>=1.11.0",
    "dagster-cloud",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
    "dagster-cloud-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_plus_nomad_test"
registry_modules = [
    "dagster_plus_nomad_test.components.*",
]

# The Dagster+ deployment + agent queue this project is wired to.
# This block is read by the GitHub Action workflow via dagster-cloud-cli
# so the deploy targets the right queue.
[tool.dagster_cloud]
organization = "hooli"
deployment = "data-eng-dev"
agent_queue = "testing-nomad"


